// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MagellanAI's product destination action: all fields 1`] = `
Object {
  "currency": "GHS",
  "productId": "&UIB5u0l0tYL8FZ*gE&f",
  "productName": "&UIB5u0l0tYL8FZ*gE&f",
  "productType": "&UIB5u0l0tYL8FZ*gE&f",
  "productVendor": "&UIB5u0l0tYL8FZ*gE&f",
  "token": "&UIB5u0l0tYL8FZ*gE&f",
  "value": 85171452310978.56,
  "variantId": "&UIB5u0l0tYL8FZ*gE&f",
  "variantName": "&UIB5u0l0tYL8FZ*gE&f",
}
`;

exports[`Testing snapshot for MagellanAI's product destination action: required fields 1`] = `
Object {
  "currency": "GHS",
  "token": "&UIB5u0l0tYL8FZ*gE&f",
  "value": 85171452310978.56,
}
`;
